<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:context=".MainActivity">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_order_add">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/scr_order_add_count_hint"
                        android:inputType="numberDecimal|numberSigned"
                        android:text="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_order_add_country_tv" />

                <Spinner
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:pointerIcon="hand"
                    android:spinnerMode="dropdown" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_order_add_service_tv" />

                <Spinner
                    android:id="@+id/service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:pointerIcon="hand"
                    android:spinnerMode="dropdown" />

                <CheckBox
                    android:id="@+id/cb_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_order_add_options_text" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_order_add_name_tv" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/scr_order_add_name_hint"
                        android:inputType="text|textMultiLine|textImeMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:hint="@string/scr_order_add_age_hint"
                        android:inputType="numberDecimal|numberSigned"
                        android:text="10" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_order_add_gender_tv" />

                <Spinner
                    android:id="@+id/s_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:pointerIcon="hand"
                    android:spinnerMode="dropdown"
                    tools:listitem="" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scr_order_add_city_tv" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:hint="@string/scr_order_add_city_hint"
                        android:inputType="text|textMultiLine|textImeMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


        </ScrollView>


        <Button
            android:id="@+id/btn_order_add"
            style="@style/SmsRegButton.Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/scr_order_add_btn" />
    </RelativeLayout>
</layout>