<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/lv_toolpapel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:background="#ff0000">


                <TextView
                    android:id="@+id/response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/err_server_access" />


                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:divider="?android:attr/dividerHorizontal"
                    android:gravity="center_horizontal|center"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <TableRow>

                        <TextView
                            android:id="@+id/service"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="service" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/DefaultText"
                            android:id="@+id/number_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textView2"
                            android:visibility="gone"
                            tools:visibility="visible" />

                        <TextView
                            style="@style/AppTheme.PhoneNumber"
                            android:id="@+id/number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:drawableLeft="@drawable/ic_content_copy_black_24dp"
                            android:drawableStart="@drawable/ic_content_copy_black_24dp"
                            android:textSize="20sp"
                            android:visibility="gone"
                            tools:text="number"
                            tools:visibility="visible" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/msg_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Код из смс:"
                            android:visibility="gone"
                            tools:visibility="visible" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/msg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_content_copy_black_24dp"
                            android:drawableStart="@drawable/ic_content_copy_black_24dp"
                            android:visibility="gone"
                            tools:text="number"
                            tools:visibility="visible" />
                    </TableRow>

                </TableLayout>
            </LinearLayout>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/lv_toolpapel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            tools:background="#000000">

            <Button
                android:id="@+id/btn_action_set_ready"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0ad4e"
                android:text="@string/btn_action_set_ready"
                android:textSize="11sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_action_set_operation_over"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/btn_action_set_operation_over"
                android:textSize="11sp"
                android:visibility="gone"
                tools:visibility="visible" />


            <Button

                android:id="@+id/btn_action_set_operation_revise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_action_set_operation_revise"
                android:textSize="11sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button

                android:id="@+id/btn_action_get_num_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_action_get_num_repeat"
                android:textSize="11sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_action_set_operation_used"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/btn_action_set_operation_used"
                android:textSize="11sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_action_set_operation_ok"
                style="@style/SmsRegButton.Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_action_set_operation_ok"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>


    </RelativeLayout>
</layout>